<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24"
        android:text="Map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_qr_code_scanner_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard_24"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/title_profile" />

</menu>